fix: make new features look good on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* general */
 body {
-  padding: 20px;
+  padding: 10px;
   font-family: 'Roboto', sans-serif;
   box-sizing: border-box;
   text-align: center;
@@ -8,10 +8,10 @@ body {
 }
 
 #main {
-  height: 85vh;
+  height: 90vh;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
   justify-content: center;
   align-items: center;
 }
